@@ -1,16 +1,11 @@
 package mods.railcraft.world.level.block.entity.manipulator;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
+import org.apache.commons.lang3.NotImplementedException;
 import com.google.common.collect.ImmutableList;
 import mods.railcraft.Translations.Tips;
 import mods.railcraft.api.carts.CartUtil;
@@ -30,7 +25,6 @@ import net.minecraft.nbt.Tag;
 import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.util.StringRepresentable;
 import net.minecraft.world.Container;
 import net.minecraft.world.MenuProvider;
 import net.minecraft.world.entity.vehicle.AbstractMinecart;
@@ -38,7 +32,6 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
-import org.apache.commons.lang3.NotImplementedException;
 
 public abstract class ManipulatorBlockEntity extends ContainerBlockEntity implements MenuProvider {
 
@@ -46,7 +39,7 @@ public abstract class ManipulatorBlockEntity extends ContainerBlockEntity implem
   public static final int PAUSE_DELAY = 4;
 
   private static final Set<RedstoneMode> SUPPORTED_REDSTONE_MODES =
-      Collections.unmodifiableSet(EnumSet.allOf(RedstoneMode.class));
+      Set.copyOf(EnumSet.allOf(RedstoneMode.class));
 
   private final AdvancedContainer cartFiltersInventory =
       new AdvancedContainer(2).listener((Container) this).phantom();
